# cathedral-mirror

./: .clang-format  .clang-tidy  .clangd  .gitattributes  .gitignore  CMakeLists.txt  README.md  building.md  dependencies.cmake  format_all.sh
lib/: CMakeLists.txt
lib/core/: CMakeLists.txt
lib/core/include/cathedral/: binary_serializers.hpp  cereal_serializers.hpp  compression.hpp  core.hpp  glm_serializers.hpp  json_serializers.hpp  plane.hpp  serializable.hpp  sphere.hpp
lib/core/include/cathedral/bits/: container.hpp  debug.hpp  error.hpp  export.hpp  forward_decl.hpp  log.hpp  macros.hpp  memory.hpp  restrict.hpp  syntactic_sugar.hpp  uid.hpp
lib/core/src/: compression.cpp  error.cpp  plane.cpp  sphere.cpp  uid.cpp
lib/editor/: CMakeLists.txt
lib/editor/include/cathedral/editor/: add_node_dialog.hpp  editor_camera_selector.hpp  editor_window.hpp  editor_window_menubar.hpp  material_browser.hpp  properties_dock_widget.hpp  scene_dock_widget.hpp  scene_tree.hpp  styling.hpp  texture_utils.hpp  utils.hpp  vulkan_widget.hpp  welcome_dialog.hpp
lib/editor/rsc/fonts/: fonts.qrc
lib/editor/rsc/icons/: icons.qrc
lib/editor/rsc/shaders/: diffuse_lighting.glsl  shaders.qrc  specular_lighting.glsl
lib/editor/src/: add_node_dialog.cpp  editor_camera_selector.cpp  editor_window.cpp  editor_window_menubar.cpp  material_browser.cpp  properties_dock_widget.cpp  scene_dock_widget.cpp  scene_tree.cpp  styling.cpp  texture_utils.cpp  vulkan_widget.cpp  welcome_dialog.cpp  welcome_dialog.ui
lib/editor/src/asset_managers/: material_definition_manager.cpp  material_definition_manager.ui  material_manager.cpp  material_manager.ui  mesh_manager.cpp  mesh_manager.ui  shader_manager.cpp  shader_manager.ui  shader_syntax_highlighter.cpp  texture_manager.cpp  texture_manager.ui
lib/editor/src/asset_managers/dialogs/: new_material_dialog.cpp  new_mesh_dialog.cpp  new_shader_dialog.cpp  new_texture_dialog.cpp
lib/editor/src/common/: code_editor.cpp  dock_title.cpp  float_edit.cpp  float_grid.cpp  item_manager.cpp  mesh_viewer.cpp  message.cpp  path_selector.cpp  slider.cpp  sliding_float.cpp  text_input_dialog.cpp  text_output_dialog.cpp  texture_list_widget.cpp  texture_picker_dialog.cpp  texture_slot_widget.cpp  texture_slot_widget.ui  transform_widget.cpp  vector3_widget.cpp  vertical_separator.cpp
lib/editor/src/dialogs/: scene_select_dialog.cpp
lib/editor/src/editor_nodes/: cameras.cpp
lib/editor/src/editor_nodes/gizmos/: translation_gizmo.cpp
lib/editor/src/gizmos/: translation_gizmo.cpp
lib/editor/src/materials/wireframe/: wireframe.cpp
lib/editor/src/node_properties/: camera2d_properties_widget.cpp  camera3d_properties_widget.cpp  material_selector.cpp  mesh3d_properties_widget.cpp  mesh_selector.cpp  node_properties_widget.cpp  point_light_properties_widget.cpp  texture_selector.cpp
lib/editor/src/plaform_abstractions/: pointer_locking.cpp
lib/engine/: CMakeLists.txt  resources.cmake
lib/engine/include/cathedral/engine/: aligned_uniform.hpp  camera.hpp  default_resources.hpp  frustum.hpp  material.hpp  material_definition.hpp  material_domain.hpp  material_uniform_bindings.hpp  mesh.hpp  mesh_buffer_storage.hpp  node_type.hpp  point_light.hpp  renderer.hpp  resource_system.hpp  scene.hpp  scene_node.hpp  script.hpp  serialization.hpp  shader.hpp  shader_bindings.hpp  shader_preprocess.hpp  shader_uniform_bindings.hpp  shader_validation.hpp  shader_variable.hpp  texture.hpp  texture_compression.hpp  texture_decompression.hpp  texture_format.hpp  texture_mip.hpp  texture_storage.hpp  transform.hpp  upload_queue.hpp  vertex_buffer_storage.hpp  vertex_input_builder.hpp  vertex_pack.hpp
lib/engine/resources/translation_gizmo/: mesh.ply  vertex_shader.glsl
lib/engine/src/: camera.cpp  frustum.cpp  material.cpp  material_definition.cpp  mesh.cpp  mesh_buffer_storage.cpp  renderer.cpp  scene.cpp  scene_node.cpp  serialization.cpp  shader_preprocess.cpp  shader_validation.cpp  shader_variable.cpp  texture.cpp  texture_compression.cpp  texture_decompression.cpp  texture_mip.cpp  transform.cpp  upload_queue.cpp  vertex_buffer_storage.cpp  vertex_input_builder.cpp
lib/engine/src/default_resources/: default_texture.cpp
lib/engine/src/default_resources/gizmo/: fragment_shader.cpp  mesh.cpp  translation_fragment_shader.cpp  translation_gizmo.cpp  translation_mesh.cpp  translation_vertex_shader.cpp  vertex_shader.cpp
lib/engine/src/materials/: definitions.cpp  world_geometry.cpp
lib/engine/src/nodes/: camera2d_node.cpp  camera3d_node.cpp  mesh3d_node.cpp  node.cpp  point_light_node.cpp
lib/gfx/: CMakeLists.txt
lib/gfx/cmake/: Vulkan.cmake
lib/gfx/include/cathedral/gfx/: aligned_uniform.hpp  buffers.hpp  depthstencil_attachment.hpp  descriptor_set_definition.hpp  image.hpp  pipeline.hpp  sampler.hpp  shader.hpp  shader_data_types.hpp  shader_reflection.hpp  swapchain.hpp  types.hpp  vma_forward.hpp  vulkan_context.hpp
lib/gfx/src/: depthstencil_attachment.cpp  descriptor_set_definition.cpp  image.cpp  pipeline.cpp  sampler.cpp  shader.cpp  shader_data_types.cpp  shader_reflection.cpp  swapchain.cpp  vk_mem_alloc.cpp  vulkan_context.cpp
lib/gfx/src/buffers/: generic_buffer.cpp  index_buffer.cpp  staging_buffer.cpp  storage_buffer.cpp  uniform_buffer.cpp  vertex_buffer.cpp
lib/project/: CMakeLists.txt
lib/project/include/cathedral/project/: asset.hpp  asset_macros.hpp  binary_serializers.hpp  json_serializers.hpp  project.hpp
lib/project/src/: asset.cpp  project.cpp
lib/project/src/assets/: material_asset.cpp  material_definition_asset.cpp  mesh_asset.cpp  shader_asset.cpp  texture_asset.cpp
lib/script/: CMakeLists.txt
lib/script/include/cathedral/script/: enums.hpp  init_macros.hpp  state.hpp  (+2 more)
lib/script/src/: enums.cpp  scene_node.cpp  vec.cpp
resources/: CMakeLists.txt
resources/editor/: resources.cmake
resources/editor/shaders/wireframe/: fragment.glsl  vertex.glsl
resources/engine/: resources.cmake
resources/engine/shaders/translation_gizmo/: fragment.glsl  vertex.glsl
tests/engine/: CMakeLists.txt  shader_preprocess.cpp
(+100 files in other folders)
